--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Bglky Blog
-SEOTitle: 周炳光的博客 | Bglky Blog
-email: bglky.me@gmail.com
+title: Nansion Blog
+SEOTitle: PHP Java Python Linux 数据库什么的都不会
+email: nansionliu@163.com
 keywords: "周炳光,bglky,周炳光的博客,bglky blog,赖柯滢,responsive,blog,framework7,jekyll"
 description: "My Blog / Jekyll Theme , SPA and responsive , based on Framework7 and Jekyll."
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -57,7 +57,7 @@ segmentfault_username: bglky
 friends: [
     {
         title: "Bglky",
-        href: "http://bglky.me"
+        href: "http://localhost"
     },
     {
         title: "Hansome",
